appsrc: Fix memory leak with callback notify not being called in dispose

https://bugzilla.gnome.org/show_bug.cgi?id=733386